todo_app/manifests-gke/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1

kind: Gateway

metadata:
  name: project-gateway
  namespace: project

spec:
  gatewayClassName: gke-l7-global-external-managed

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
